--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"axios": "^1.13.2",
 		"i18next": "^25.6.1",
-		"i18next-browser-languagedetector": "^8.2.0"
+		"i18next-browser-languagedetector": "^8.2.0",
+		"marked": "^17.0.0"
 	}
 }
